# open-env-project

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  pyrightconfig.json  read_log.py  requirements.txt  test_output_clean.txt  validate.py
baselines/: heuristic_baseline.py
hospital_bed_env/: Dockerfile  README.md  __init__.py  client.py  models.py  pyproject.toml  validation_output.txt
hospital_bed_env/server/: __init__.py  app.py  grader.py  hospital_environment.py  simulation.py  tasks.py
logs/: final_results.txt  final_results_utf8.txt  inf_utf8.txt  inference_out_final.txt  inference_output.txt  out2.txt  out2_utf8.txt  server_out.txt  server_out_utf8.txt
server/: app.py
tests/: test_grader.py  test_simulation.py
